--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 .footer-container {
   background-color: #242424;
-  padding: 4rem 0 2rem;
+  padding: 4rem 0 2rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -13,9 +13,10 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+
   margin-bottom: 24px;
   padding: 24px;
-  color: #ffffff;
+  color: #fff;
 }
 
 .footer-subscription > p {
@@ -40,9 +41,10 @@
   outline: none;
   border: none;
   font-size: 18px;
-  margin-bottom: 18px;
+  margin-bottom: 16px;
   border: 1px solid #fff;
 }
+
 .footer-links {
   width: 100%;
   max-width: 1000px;
@@ -53,47 +55,55 @@
 .footer-link-wrapper {
   display: flex;
 }
+
 .footer-link-items {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   margin: 16px;
   text-align: left;
   width: 160px;
   box-sizing: border-box;
 }
+
 .footer-link-items h2 {
   margin-bottom: 16px;
 }
+
 .footer-link-items > h2 {
   color: #fff;
 }
+
 .footer-link-items a {
   color: #fff;
   text-decoration: none;
-  margin-bottom: 8px;
+  margin-bottom: 0.5rem;
 }
 
 .footer-link-items a:hover {
   color: #e9e9e9;
   transition: 0.3s ease-out;
 }
+
 .footer-email-form h2 {
-  margin-bottom: 32px;
+  margin-bottom: 2rem;
 }
+
 .footer-input::placeholder {
   color: #b1b1b1;
 }
 
-/* Social */
+/* Social Icons */
 .social-icon-link {
   color: #fff;
   font-size: 24px;
 }
+
 .social-media {
   max-width: 1000px;
   width: 100%;
 }
+
 .social-media-wrap {
   display: flex;
   justify-content: space-between;
@@ -102,12 +112,14 @@
   max-width: 1000px;
   margin: 40px auto 0 auto;
 }
+
 .social-icons {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 240px;
 }
+
 .social-logo {
   color: #fff;
   justify-self: start;
@@ -116,28 +128,36 @@
   text-decoration: none;
   font-size: 2rem;
   display: flex;
-  align-self: center;
+  align-items: center;
   margin-bottom: 16px;
 }
+
 .website-rights {
-  margin-bottom: 16px;
   color: #fff;
+  margin-bottom: 16px;
 }
 
 @media screen and (max-width: 820px) {
   .footer-links {
     padding-top: 2rem;
   }
+
   .footer-input {
     width: 100%;
   }
+
   .btn {
     width: 100%;
   }
+
   .footer-link-wrapper {
     flex-direction: column;
   }
+
   .social-media-wrap {
     flex-direction: column;
   }
+}
+
+@media screen and (max-width: 768px) {
 }
