--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -21,7 +21,7 @@
 .footer-link-items {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   margin: 16px;
   text-align: left;
   width: 160px;
@@ -79,7 +79,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 240px;
+  width: 10rem;
 }
 
 .social-logo {
