--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -30,6 +30,7 @@ video {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   font-size: 32px;
+  text-align: center;
 }
 
 .hero-btns {
