--- a/src/App.css
+++ b/src/App.css
@@ -6,17 +6,17 @@
 }
 
 .home,
-.services,
-.products,
-.sign-up {
+.about,
+.featured {
   display: flex;
+  flex-direction: column;
   height: 90vh;
   align-items: center;
   justify-content: center;
   font-size: 3rem;
 }
 
-.services {
+.about {
   background-image: url("./images/img-2.jpg");
   background-position: center;
   background-size: cover;
@@ -24,20 +24,16 @@
   color: #fff;
   font-size: 100px;
 }
-
-.products {
-  background-image: url("./images/img-7.jpg");
-  background-position: center;
-  background-size: fill;
-  background-repeat: no-repeat;
+.about,
+.featured p {
   color: #fff;
-  font-size: 100px;
+  font-size: 20px;
 }
 
-.sign-up {
-  background-image: url("./images/img-8.jpg");
+.featured {
+  background-image: url("./images/img-10.jpg");
   background-position: center;
-  background-size: cover;
+  background-size: fill;
   background-repeat: no-repeat;
   color: #fff;
   font-size: 100px;
