--- a/src/App.css
+++ b/src/App.css
@@ -21,13 +21,15 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  color: #fff;
+  color: #fcd0f6;
   font-size: 100px;
 }
 .about p,
 .featured p {
   color: #fff;
   font-size: 20px;
+  background-color: rgba(50, 50, 50, 0.3);
+  text-align: center;
 }
 
 .featured {
@@ -35,6 +37,24 @@
   background-position: center;
   background-size: fill;
   background-repeat: no-repeat;
-  color: #fff;
+  color: #fcd0f6;
   font-size: 100px;
+}
+@media screen and (max-width: 960px) {
+  .about > h1,
+  .featured > h1 {
+    font-size: 70px;
+    margin-top: -150px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about > h1,
+  .featured > h1 {
+    font-size: 70px;
+    margin-top: -150px;
+  }
+  .about > p,
+  .featured > p {
+    font-size: 20px;
+  }
 }
