--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  color: #fcd0f6;
+  color: #ff06ff9c;
   font-size: 100px;
 }
 .about p,
