--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -6,7 +6,7 @@
 .cards h1 {
   display: inline;
   position: relative;
-  font: 15vw Helvetica, Sans-Serif;
+  font: 13vw Helvetica, Sans-Serif;
   letter-spacing: -5px;
   color: rgba(0, 0, 255, 0.5);
 }
@@ -14,8 +14,8 @@
 .cards h1:after {
   content: "MY FAVOURITES";
   position: absolute;
-  left: 10px;
-  top: 5px;
+  left: 1vw;
+  top: 0.5vw;
   color: rgba(255, 0, 0, 0.5);
 }
 
