--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -24,6 +24,7 @@ video {
   font-size: 100px;
   margin-top: -100px;
   text-align: center;
+  z-index: 1;
 }
 
 .hero-container > p {
@@ -33,18 +34,16 @@ video {
     "Lucida Sans", Arial, sans-serif;
   font-size: 32px;
   text-align: center;
+  z-index: 1;
 }
 
 .hero-btns {
   margin-top: 32px;
+  z-index: 1;
 }
 
 .hero-btns .btn {
   margin: 6px;
-}
-
-.fa-play-circle {
-  margin-left: 4px;
 }
 
 @media screen and (max-width: 960px) {
